# gpu-kernel-baseliner

./: .clang-format  .clang-tidy  CMakeLists.txt  CMakePresets.json  README.md  preset.json
baseliner/: Axe.hpp  AxeSweeping.hpp  Benchmark.hpp  Builder.cpp  Builder.hpp  CMakeLists.txt  Case.hpp  ConfigFile.hpp  Conversions.hpp  Durations.hpp  Error.hpp  Executable.cpp  Executable.hpp  GIT_VERSION.hpp  Handler.hpp  JsonHandler.cpp  JsonHandler.hpp  JsonImplementation.cpp  JsonImplementation.hpp  Kernel.hpp  Manager.cpp  Manager.hpp  Metadata.hpp  Metric.hpp  OptionTypes.hpp  Options.cpp  Options.hpp  Orchestrator.hpp  Output.hpp  Planner.cpp  Planner.hpp  Protocol.hpp  RQ.cpp  RQ.hpp  Recipe.hpp  Result.cpp  Result.hpp  Runner.hpp  Serializer.cpp  Serializer.hpp  (+14 more)
baseliner/backend/: Backend.hpp  BackendStats.hpp
baseliner/backend/cuda/: BlockingKernel.cu  CMakeLists.txt  CudaBackend.cu  CudaBackend.hpp  CudaStats.cu  GpuTimer.cu  L2Flusher.cu  NvmlUtils.cu  Timer.cu
baseliner/backend/hip/: AmdSmiUtils.hip  BlockingKernel.hip  CMakeLists.txt  GpuTimer.hip  HipBackend.hip  HipBackend.hpp  HipStats.hip  L2Flusher.hip  Timer.hip
baseliner/hardware/: Backend.hpp  BackendStats.hpp  CMakeLists.txt
baseliner/hardware/cuda/: BlockingKernel.cu  CudaBackend.cu  CudaBackend.hpp  CudaStats.cu  L2Flusher.cu  NvmlUtils.cu  Timer.cu
baseliner/hardware/hip/: AmdSmiUtils.hip  BlockingKernel.hip  CMakeLists.txt  HipBackend.hip  HipBackend.hpp  HipStats.hip  L2Flusher.hip  Timer.hip
baseliner/managers/: BackendManager.hpp  BackendSpecificStorage.hpp  BackendStorage.hpp  BenchmarkCaseManager.hpp  CMakeLists.txt  Components.cpp  Components.hpp  Factories.hpp  GeneralStorage.hpp  Manager.hpp  PresetInjection.hpp  RegisteringMacros.hpp  Registrars.hpp  StoppingManager.hpp  StorageManager.cpp  StorageManager.hpp  SuiteManager.hpp
baseliner/research_questions/: CMakeLists.txt  research_questions.hpp
baseliner/stats/: CMakeLists.txt  IStats.hpp  Stats.cpp  Stats.hpp  StatsDictionnary.hpp  StatsEngine.cpp  StatsEngine.hpp  StatsRegistry.hpp  StatsType.hpp
cmake/: utils.cmake
documentation/conceptual/: Baseliner.MD  Concept.MD  Reference.MD
examples/: CMakeLists.txt
examples/cuda/: CMakeLists.txt
examples/cuda-manipulation/: CMakeLists.txt  main.cu
examples/cuda/ComputationKernel/: CMakeLists.txt  ComputationKernel.cu  ComputationKernel.hpp
examples/cuda/MatMulCuda/: CMakeLists.txt  MatMul.cu  MatMul.hpp
examples/cuda/simple_benchmark/: CMakeLists.txt  main.cu  simple_benchmark.cu
examples/cuda/simple_cli/: CMakeLists.txt  main.cu
examples/cuda/simple_suite/: CMakeLists.txt  simple_suite.cu
examples/cuda/using-device/: CMakeLists.txt  main.cu
examples/cuda/using-kernel/: CMakeLists.txt  main.cu  main.hpp
examples/cuda/using-runner/: CMakeLists.txt  main.cu  main.hpp
examples/cuda/using_bare_benchmark/: CMakeLists.txt  using_bare_benchmark.cu
examples/cuda/using_benchmark/: CMakeLists.txt  main.cu
examples/cuda/using_device/: CMakeLists.txt  main.cu
examples/cuda/using_executable/: CMakeLists.txt  main.cu
examples/cuda/using_harness/: CMakeLists.txt  main.cu
examples/cuda/using_kernel/: CMakeLists.txt  main.cu
examples/cuda/using_options/: CMakeLists.txt  main.cu
examples/cuda/using_research_questions/: CMakeLists.txt  using_research_questions.cu
examples/cuda/using_runner/: CMakeLists.txt  main.cu
examples/device-manipulation/: CMakeLists.txt  main.cpp
examples/hip/: CMakeLists.txt
examples/hip/ComputationKernel/: CMakeLists.txt  ComputationKernel.hip  ComputationKernel.hpp
examples/hip/MatMulHip/: CMakeLists.txt  MatMul.hip  MatMul.hpp
examples/hip/simple_benchmark/: CMakeLists.txt  simple_benchmark.hip
examples/hip/simple_cli/: CMakeLists.txt  main.hip
examples/hip/simple_suite/: CMakeLists.txt  simple_suite.hip
examples/hip/using-device/: CMakeLists.txt  main.hip
examples/hip/using-kernel/: CMakeLists.txt  main.hip  main.hpp
examples/hip/using-runner/: CMakeLists.txt  main.hip  main.hpp
examples/hip/using_bare_benchmark/: CMakeLists.txt  using_bare_benchmark.hip
examples/hip/using_benchmark/: CMakeLists.txt  main.hip
examples/hip/using_device/: CMakeLists.txt  main.hip
examples/hip/using_harness/: CMakeLists.txt  main.hip
examples/hip/using_kernel/: CMakeLists.txt  main.hip
examples/hip/using_options/: CMakeLists.txt  main.hip
examples/hip/using_research_questions/: CMakeLists.txt  using_research_questions.hip
examples/hip/using_rocblas/: CMakeLists.txt  GemmRocblasCase.hpp  main.hip
examples/hip/using_runner/: CMakeLists.txt  main.hip
experiments/: CMakeLists.txt
experiments/nothing-kernel/: CMakeLists.txt  NothingKernel.hpp  cuda-config.json  hip-config.json  main.cpp
experiments/nothing-kernel/cuda/: NothingKernel.cu
experiments/nothing-kernel/hip/: NothingKernel.hip
src/: Benchmark.hpp  CMakeLists.txt  CpuTimer.hpp  Durations.hpp  ITimer.hpp  JsonHandler.hpp  Kernel.hpp  Options.hpp  Runner.hpp  StoppingCriterion.hpp  Timer.hpp
src/backend/: Backend.cpp  Backend.hpp  CMakeLists.txt  CpuTimer.hpp
src/backend/cuda/: BlockingKernel.cu  CMakeLists.txt  CudaBackend.cu  CudaBackend.hpp  CudaTimer.cu  GpuTimer.cu  L2Flusher.cu
src/backend/hip/: BlockingKernel.hip  GpuTimer.hip  HipBackend.hip  HipBackend.hpp  L2Flusher.hip
src/research_questions/: research_questions.hpp
tools/: baseliner-hipify.py  few-shot.md  locking-clocks.sh  z-score-array-generator.py
