cmake_minimum_required(VERSION 3.15)
project(baseliner VERSION 1.0.0 LANGUAGES CXX)
set(CMAKE_CXX_STANDARD 17)
set(CMAKE_CXX_STANDARD_REQUIRED ON)
option(BASELINER_BUILD_EXAMPLES "Build baseliner examples" OFF)

include(CheckLanguage)
check_language(CUDA)
if(CMAKE_CUDA_COMPILER)
    set(CMAKE_CUDA_RUNTIME_LIBRARY Shared)
    enable_language(CUDA)
    if(CMAKE_CUDA_COMPILER_VERSION VERSION_LESS 11.0)
        message(FATAL_ERROR "Baseliner requires CUDA 11.0 or greater (found ${CMAKE_CUDA_COMPILER_VERSION})")
    endif()
    set(BASELINER_HAS_CUDA ON)
endif()

check_language(HIP)
if(CMAKE_HIP_COMPILER)
    enable_language(HIP)
    if(CMAKE_HIP_COMPILER_VERSION VERSION_LESS 5.2)
        message(FATAL_ERROR "Baseliner requires ROCm (HIP) 5.2 or greater (found ${CMAKE_HIP_COMPILER_VERSION})")
    endif()
    set(BASELINER_HAS_HIP ON)
endif()
add_subdirectory(baseliner)
if(BASELINER_BUILD_EXAMPLES)
    add_subdirectory(examples)
endif()