add_subdirectory(using_device)
add_subdirectory(ComputationKernel)
add_subdirectory(MatMulHip)
add_subdirectory(using_kernel)
add_subdirectory(using_runner)
add_subdirectory(using_options)
add_subdirectory(simple_cli)
add_subdirectory(simple_benchmark)
add_subdirectory(using_bare_benchmark)
add_subdirectory(using_research_questions)
